# ShotShield

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
core/: package.json  tsconfig.json
core/src/: index.ts  patterns.ts  scan.ts  types.ts  validators.ts
core/test/: redos.test.ts  scan.test.ts  validators.test.ts
desktop/: README.md  index.html  package.json  vitest.config.ts
desktop/scripts/: copy-tesseract.mjs  copy-vendor.mjs
desktop/src/: export.ts  faces.ts  image.ts  main.ts  ocr.ts  redact.ts  settings.ts  styles.css  update.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/test/: ocr.test.ts  redact.test.ts  settings.test.ts
